--- a/index.html
+++ b/index.html
@@ -1,226 +1,237 @@
-<h1 id="kharadi-enterprises-account">Kharadi Enterprise's Account</h1>
-<table>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Kharadi Enterprise’s Account.md</title><style></style></head><body id="preview">
+<h1 class="code-line" data-line-start=0 data-line-end=1><a id="Kharadi_Enterprises_Account_0"></a>Kharadi Enterprise’s Account</h1>
+<table class="table table-striped table-bordered">
 <thead>
-<tr class="header">
-<th align="left">Amount</th>
-<th align="left">Type</th>
-<th align="left">Date</th>
-<th align="left">Supplier</th>
-<th align="left">Balance</th>
-<th align="left">Due Date</th>
-<th align="left">Settled</th>
-<th align="left">Reference</th>
-<th align="left">Notes</th>
+<tr>
+<th>Amount</th>
+<th>Type</th>
+<th>Date</th>
+<th>Supplier</th>
+<th>Balance</th>
+<th>Due Date</th>
+<th>Settled</th>
+<th>Reference</th>
+<th>Notes</th>
 </tr>
 </thead>
 <tbody>
-<tr class="odd">
-<td align="left">59450</td>
-<td align="left">Capital</td>
-<td align="left">11/09/2020</td>
-<td align="left">Abdulvahab</td>
-<td align="left">59450</td>
-<td align="left">11/09/2020</td>
-<td align="left">Y</td>
-<td align="left"></td>
+<tr>
+<td>59450</td>
+<td>Capital</td>
+<td>11/09/2020</td>
+<td>Abdulvahab</td>
+<td>59450</td>
+<td>11/09/2020</td>
+<td>Y</td>
+<td></td>
+<td></td>
 </tr>
-<tr class="even">
-<td align="left">-59450</td>
-<td align="left">Buying</td>
-<td align="left">11/09/2020</td>
-<td align="left">Ahd. Creation</td>
-<td align="left">0</td>
-<td align="left">11/09/2020</td>
-<td align="left">Y</td>
-<td align="left"></td>
+<tr>
+<td>-59450</td>
+<td>Buying</td>
+<td>11/09/2020</td>
+<td>Ahd. Creation</td>
+<td>0</td>
+<td>11/09/2020</td>
+<td>Y</td>
+<td></td>
+<td></td>
 </tr>
-<tr class="odd">
-<td align="left">61402</td>
-<td align="left">Sale</td>
-<td align="left">29/09/2020</td>
-<td align="left">Capital Creation</td>
-<td align="left">61402</td>
-<td align="left">29/09/2020</td>
-<td align="left">Y</td>
-<td align="left"></td>
+<tr>
+<td>61402</td>
+<td>Sale</td>
+<td>29/09/2020</td>
+<td>Capital Creation</td>
+<td>61402</td>
+<td>29/09/2020</td>
+<td>Y</td>
+<td></td>
+<td></td>
 </tr>
-<tr class="even">
-<td align="left">-58670</td>
-<td align="left">Buying</td>
-<td align="left">06/10/2020</td>
-<td align="left">Ahd. Party</td>
-<td align="left">2732</td>
-<td align="left">06/10/2020</td>
-<td align="left">Y</td>
-<td align="left"></td>
+<tr>
+<td>-58670</td>
+<td>Buying</td>
+<td>06/10/2020</td>
+<td>Ahd. Party</td>
+<td>2732</td>
+<td>06/10/2020</td>
+<td>Y</td>
+<td></td>
+<td></td>
 </tr>
-<tr class="odd">
-<td align="left">60630</td>
-<td align="left">Profit</td>
-<td align="left">15/10/2020</td>
-<td align="left">Capital Creation</td>
-<td align="left">63362</td>
-<td align="left">15/10/2020</td>
-<td align="left">Y</td>
-<td align="left"></td>
+<tr>
+<td>60630</td>
+<td>Profit</td>
+<td>15/10/2020</td>
+<td>Capital Creation</td>
+<td>63362</td>
+<td>15/10/2020</td>
+<td>Y</td>
+<td></td>
+<td></td>
 </tr>
-<tr class="even">
-<td align="left">-3912</td>
-<td align="left">Setup</td>
-<td align="left">15/10/2020</td>
-<td align="left">Salman</td>
-<td align="left">59450</td>
-<td align="left">15/10/2020</td>
-<td align="left">Y</td>
-<td align="left"></td>
-<td align="left">Professional Tax, Business Reg., GST, Account Opening</td>
+<tr>
+<td>-3912</td>
+<td>Setup</td>
+<td>15/10/2020</td>
+<td>Salman</td>
+<td>59450</td>
+<td>15/10/2020</td>
+<td>Y</td>
+<td></td>
+<td>Professional Tax, Business Reg., GST, Account Opening</td>
 </tr>
-<tr class="odd">
-<td align="left">9550</td>
-<td align="left">Capital</td>
-<td align="left">24/11/2020</td>
-<td align="left">Abdulvahab</td>
-<td align="left">69000</td>
-<td align="left">24/11/2020</td>
-<td align="left">Y</td>
-<td align="left"></td>
+<tr>
+<td>9550</td>
+<td>Capital</td>
+<td>24/11/2020</td>
+<td>Abdulvahab</td>
+<td>69000</td>
+<td>24/11/2020</td>
+<td>Y</td>
+<td></td>
+<td></td>
 </tr>
-<tr class="even">
-<td align="left">6000</td>
-<td align="left">Capital</td>
-<td align="left">24/11/2020</td>
-<td align="left">Abdulvahab</td>
-<td align="left">75000</td>
-<td align="left">24/11/2020</td>
-<td align="left">Y</td>
-<td align="left"></td>
+<tr>
+<td>6000</td>
+<td>Capital</td>
+<td>24/11/2020</td>
+<td>Abdulvahab</td>
+<td>75000</td>
+<td>24/11/2020</td>
+<td>Y</td>
+<td></td>
+<td></td>
 </tr>
-<tr class="odd">
-<td align="left">-77450</td>
-<td align="left">Buying</td>
-<td align="left">25/11/2020</td>
-<td align="left">Surat txt.</td>
-<td align="left">-2450</td>
-<td align="left">15/12/2020</td>
-<td align="left">Y</td>
-<td align="left">003</td>
+<tr>
+<td>-77450</td>
+<td>Buying</td>
+<td>25/11/2020</td>
+<td>Surat txt.</td>
+<td>-2450</td>
+<td>15/12/2020</td>
+<td>Y</td>
+<td>003</td>
+<td></td>
 </tr>
-<tr class="even">
-<td align="left">100000</td>
-<td align="left">Capital</td>
-<td align="left">01/12/2020</td>
-<td align="left">Abdulvahab</td>
-<td align="left">97550</td>
-<td align="left">01/12/2020</td>
-<td align="left">Y</td>
-<td align="left"></td>
+<tr>
+<td>100000</td>
+<td>Capital</td>
+<td>01/12/2020</td>
+<td>Abdulvahab</td>
+<td>97550</td>
+<td>01/12/2020</td>
+<td>Y</td>
+<td></td>
+<td></td>
 </tr>
-<tr class="odd">
-<td align="left">-83982</td>
-<td align="left">Buying</td>
-<td align="left">01/12/2020</td>
-<td align="left">Ahd. Party</td>
-<td align="left">13568</td>
-<td align="left">01/12/2020</td>
-<td align="left">Y</td>
-<td align="left">3714</td>
-<td align="left"></td>
+<tr>
+<td>-83982</td>
+<td>Buying</td>
+<td>01/12/2020</td>
+<td>Ahd. Party</td>
+<td>13568</td>
+<td>01/12/2020</td>
+<td>Y</td>
+<td>3714</td>
+<td></td>
 </tr>
-<tr class="even">
-<td align="left">26100</td>
-<td align="left">Sale</td>
-<td align="left">02/12/2020</td>
-<td align="left">Capital Creation</td>
-<td align="left">39668</td>
-<td align="left">15/12/2020</td>
-<td align="left">N</td>
-<td align="left">003</td>
-<td align="left">80548 - 26100 = 54448</td>
+<tr>
+<td>26100</td>
+<td>Sale</td>
+<td>02/12/2020</td>
+<td>Capital Creation</td>
+<td>39668</td>
+<td>15/12/2020</td>
+<td>N</td>
+<td>003</td>
+<td>80548 - 26100 = 54448</td>
 </tr>
-<tr class="odd">
-<td align="left">40000</td>
-<td align="left">Sale</td>
-<td align="left">16/12/2020</td>
-<td align="left">Capital Creation</td>
-<td align="left">79668</td>
-<td align="left">15/12/2020</td>
-<td align="left">N</td>
-<td align="left">003</td>
-<td align="left">54448 - 40000 = 14448</td>
+<tr>
+<td>40000</td>
+<td>Sale</td>
+<td>16/12/2020</td>
+<td>Capital Creation</td>
+<td>79668</td>
+<td>15/12/2020</td>
+<td>N</td>
+<td>003</td>
+<td>54448 - 40000 = 14448</td>
 </tr>
-<tr class="even">
-<td align="left">14448</td>
-<td align="left">Sale</td>
-<td align="left">16/12/2020</td>
-<td align="left">Capital Creation</td>
-<td align="left">94116</td>
-<td align="left">15/12/2020</td>
-<td align="left">Y</td>
-<td align="left">003</td>
-<td align="left">14448 - 14448 = 0</td>
+<tr>
+<td>14448</td>
+<td>Sale</td>
+<td>16/12/2020</td>
+<td>Capital Creation</td>
+<td>94116</td>
+<td>15/12/2020</td>
+<td>Y</td>
+<td>003</td>
+<td>14448 - 14448 = 0</td>
 </tr>
-<tr class="odd">
-<td align="left">2000</td>
-<td align="left">Divident</td>
-<td align="left">16/12/2020</td>
-<td align="left">Abdulvahab</td>
-<td align="left">92116</td>
-<td align="left"></td>
-<td align="left">Y</td>
-<td align="left"></td>
-<td align="left">For home expense</td>
+<tr>
+<td>2000</td>
+<td>Divident</td>
+<td>16/12/2020</td>
+<td>Abdulvahab</td>
+<td>92116</td>
+<td></td>
+<td>Y</td>
+<td></td>
+<td>For home expense</td>
 </tr>
 </tbody>
 </table>
-<h1 id="capital-creation-credit-account">Capital Creation Credit Account</h1>
-<table>
+<h1 class="code-line" data-line-start=23 data-line-end=24><a id="Capital_Creation_Credit_Account_23"></a>Capital Creation Credit Account</h1>
+<table class="table table-striped table-bordered">
 <thead>
-<tr class="header">
-<th align="left">Reference</th>
-<th align="left">Meter</th>
-<th align="left">Rate</th>
-<th align="left">Total</th>
-<th align="left">Purchase Date</th>
-<th align="left">Due Date</th>
-<th align="left">Settled</th>
+<tr>
+<th>Reference</th>
+<th>Meter</th>
+<th>Rate</th>
+<th>Total</th>
+<th>Purchase Date</th>
+<th>Due Date</th>
+<th>Settled</th>
 </tr>
 </thead>
 <tbody>
-<tr class="odd">
-<td align="left">001</td>
-<td align="left"></td>
-<td align="left"></td>
-<td align="left">61402</td>
-<td align="left">11/09/2020</td>
-<td align="left">29/09/2020</td>
-<td align="left">Y</td>
+<tr>
+<td>001</td>
+<td></td>
+<td></td>
+<td>61402</td>
+<td>11/09/2020</td>
+<td>29/09/2020</td>
+<td>Y</td>
 </tr>
-<tr class="even">
-<td align="left">002</td>
-<td align="left"></td>
-<td align="left"></td>
-<td align="left">60630</td>
-<td align="left">06/10/2020</td>
-<td align="left">15/10/2020</td>
-<td align="left">Y</td>
+<tr>
+<td>002</td>
+<td></td>
+<td></td>
+<td>60630</td>
+<td>06/10/2020</td>
+<td>15/10/2020</td>
+<td>Y</td>
 </tr>
-<tr class="odd">
-<td align="left">003</td>
-<td align="left">1549</td>
-<td align="left">52</td>
-<td align="left">80548</td>
-<td align="left">25/11/2020</td>
-<td align="left">15/12/2020</td>
-<td align="left">Y</td>
+<tr>
+<td>003</td>
+<td>1549</td>
+<td>52</td>
+<td>80548</td>
+<td>25/11/2020</td>
+<td>15/12/2020</td>
+<td>Y</td>
 </tr>
-<tr class="even">
-<td align="left">3714</td>
-<td align="left">1376.75</td>
-<td align="left">63</td>
-<td align="left">86735.25</td>
-<td align="left">01/12/2020</td>
-<td align="left">20/12/2020</td>
-<td align="left">N</td>
+<tr>
+<td>3714</td>
+<td>1376.75</td>
+<td>63</td>
+<td>86735.25</td>
+<td>01/12/2020</td>
+<td>20/12/2020</td>
+<td>N</td>
 </tr>
 </tbody>
 </table>
+</body></html>
