--- a/index.html
+++ b/index.html
@@ -213,9 +213,20 @@
 <td>CF-3014</td>
 <td>Order for Rayon from Ahd.</td>
 </tr>
+<tr>
+<td>15000</td>
+<td>Sale</td>
+<td>10/01/2020</td>
+<td>Capital Creation</td>
+<td>38116</td>
+<td>20/12/2020</td>
+<td>N</td>
+<td>3714</td>
+<td>36735.25 - 15000 = 21735.26</td>
+</tr>
 </tbody>
 </table>
-<h1 class="code-line" data-line-start=27 data-line-end=28><a id="Capital_Creation_Credit_Account_27"></a>Capital Creation Credit Account</h1>
+<h1 class="code-line" data-line-start=29 data-line-end=30><a id="Capital_Creation_Credit_Account_29"></a>Capital Creation Credit Account</h1>
 <table class="table table-striped table-bordered">
 <thead>
 <tr>
@@ -278,7 +289,7 @@
 <td>01/12/2020</td>
 <td>20/12/2020</td>
 <td>N</td>
-<td>36735.25</td>
+<td>21735.25</td>
 </tr>
 <tr>
 <td>CF-3014</td>
