--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 <td>20/12/2020</td>
 <td>K K Fabrics</td>
 <td>23116</td>
-<td></td>
+<td>10/01/2021</td>
 <td>Y</td>
 <td>CF-3014</td>
 <td>Order for Rayon from Ahd.</td>
@@ -227,9 +227,9 @@
 <tr>
 <td>21735.25</td>
 <td>Sale</td>
-<td>25/01/2020</td>
+<td>25/01/2021</td>
 <td>Capital Creation</td>
-<td>38116</td>
+<td>59851.25</td>
 <td>20/12/2020</td>
 <td>N</td>
 <td>3714</td>
@@ -238,17 +238,72 @@
 <tr>
 <td>45264.75</td>
 <td>Sale</td>
-<td>25/01/2020</td>
+<td>25/01/2021</td>
 <td>Capital Creation</td>
-<td>38116</td>
-<td>20/12/2020</td>
+<td>105116</td>
+<td>10/01/2021</td>
 <td>N</td>
 <td>CF-3014</td>
 <td>117868.01 - 45264.75 = 72603.26</td>
 </tr>
+<tr>
+<td>33000.00</td>
+<td>Sale</td>
+<td>26/01/2021</td>
+<td>Capital Creation</td>
+<td>138116</td>
+<td>10/01/2021</td>
+<td>N</td>
+<td>CF-3014</td>
+<td>72603.26 - 33000 = 39603.26</td>
+</tr>
+<tr>
+<td>25,000.00</td>
+<td>Sale</td>
+<td>01/02/2021</td>
+<td>Capital Creation</td>
+<td>163116</td>
+<td>10/01/2021</td>
+<td>N</td>
+<td>CF-3014</td>
+<td>39603.24 - 25000 = 14603.26</td>
+</tr>
+<tr>
+<td>14604</td>
+<td>Sale</td>
+<td>02/02/2021</td>
+<td>Capital Creation</td>
+<td>177720</td>
+<td>10/01/2021</td>
+<td>Y</td>
+<td>CF-3014</td>
+<td>14603.26- 14604 = 0</td>
+</tr>
+<tr>
+<td>50000</td>
+<td>Divident</td>
+<td>01/02/2021</td>
+<td>Abdulvahab Kharadi</td>
+<td>127720</td>
+<td></td>
+<td>Y</td>
+<td></td>
+<td>Transfer into citibank</td>
+</tr>
+<tr>
+<td>50000</td>
+<td>Divident</td>
+<td>03/02/2021</td>
+<td>Abdulvahab Kharadi</td>
+<td>77720</td>
+<td></td>
+<td>Y</td>
+<td>Transfer into citbank</td>
+<td></td>
+</tr>
 </tbody>
 </table>
-<h1 class="code-line" data-line-start=31 data-line-end=32><a id="Capital_Creation_Credit_Account_31"></a>Capital Creation Credit Account</h1>
+<h1 class="code-line" data-line-start=36 data-line-end=37><a id="Capital_Creation_Credit_Account_36"></a>Capital Creation Credit Account</h1>
 <table class="table table-striped table-bordered">
 <thead>
 <tr>
@@ -323,7 +378,7 @@
 <td>20/12/2020</td>
 <td>10/01/2021</td>
 <td>N</td>
-<td>117868.01 - 45264.75 = 72603.26</td>
+<td>117868.01 - 45264.75 - 25000 - 14604 = 0</td>
 </tr>
 </tbody>
 </table>
